Fixed background visibility using aboslute URL

--- a/css/theme/ewb.css
+++ b/css/theme/ewb.css
@@ -10,7 +10,7 @@ section.has-dark-background, section.has-dark-background h1, section.has-dark-ba
  * GLOBAL STYLES
  *********************************************/
 body {
-  background-image: url(img/reveal-background.png) no-repeat center bottom;
+  background-image: url(https://charlingli.github.io/presentation-ewb-fyp-infonight2018/img/reveal-background.png) no-repeat center bottom;
   background-size: 100%;
   background: #fff;
   background-color: #fff; }
